[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Glass.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BREAKABLE_BLUE.png" type="Texture" id=2]
[ext_resource path="res://Audio/temp_wood.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/glass shard.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15.754, 32 )

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 16, 32, 1 )
flag_align_y = true
flag_rotate_y = false
flag_disable_z = true
spread = 20.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 100.0
damping_random = 0.2
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Radial Accel", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="Animation" id=3]

resource_name = "particleFadeout"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("particles2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="BreakableBlock" type="StaticBody2D" index="0" groups=[
"Breakable",
"Damageable",
"Shatterable",
]]

input_pickable = false
collision_layer = 8
collision_mask = 17
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
health = 1
paletteType = null

[node name="sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
flip_v = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="collisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="audioStreamPlayer" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="particles2D" type="Particles2D" parent="." index="3"]

emitting = false
amount = 600
lifetime = 600.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="animationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/particleFadeout = SubResource( 3 )
blend_times = [  ]

[connection signal="finished" from="audioStreamPlayer" to="." method="_on_audioStreamPlayer_finished"]


